# MB_ASSISTANT_BASE

./: .gitignore  README.md  WD.ipynb  requirements.txt
backend/: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_created_at.py
backend/src/: config.py  main.py  prompts.py
backend/src/api/: agent.py
backend/src/api/router/: chats.py  user.py
backend/src/core/: config.py
backend/src/db/: session.py
backend/src/models/: chat.py  user.py
backend/src/schemas/: chat.py  user.py
backend/src/services/: rag_engine.py  tools.py
experiments/: MB_ASSISTANT.ipynb  Pinecone_Ingestion.ipynb  experiments.ipynb
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  ClinicalPay.jsx  index.css  main.jsx
